public enum Suggestion {
    WAIT, NORMALRESET, MOVE, OPEN, CLOSE, DOUBLERESET, REVERSE, END
}
